# backend/routes/api.php
@@ -3,6 +3,8 @@
 use Illuminate\Support\Facades\Route;
 use App\Http\Controllers\Api\ChatbotController;
 use App\Http\Controllers\Api\ChatLogController;
+use App\Http\Controllers\api\AdmissionController;
+
 
 
 /*
@@ -28,3 +30,8 @@ Route::get('/chat-logs', [ChatLogController::class, 'index']);
 Route::get('/chat-logs/{id}', [ChatLogController::class, 'show']);
 Route::delete('/chat-logs/{id}', [ChatLogController::class, 'destroy']);
 Route::post('/chat', [ChatbotController::class, 'chat']);
+Route::get('/admissions', [AdmissionController::class, 'index']);
+Route::post('/admissions', [AdmissionController::class, 'store']);
+Route::get('/admissions/{id}', [AdmissionController::class, 'show']);
+Route::put('/admissions/{id}', [AdmissionController::class, 'update']);
+Route::delete('/admissions/{id}', [AdmissionController::class, 'destroy']);
